--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Reviews</h1>
     <article class="review">
         <div id="img-container">
-            <img src="" id="main-img" style="width: 200px; height: 200px; object-fit: cover;">
+            <img src="" id="main-img" style="width: 256x; height: 132; object-fit: cover;">
         </div>
-        <h4 id="food-name"></h4>
+        <h4 id="build-name"></h4>
         <p id="type"></p>
         <p id="info"></p>
 
@@ -19,5 +19,6 @@
         <button id="prev-btn"> &lt; </button>
         <button id="next-btn"> &gt; </button>
     </article>
+    <script src="app.js"></script>
 </body>
 </html>
