--- a/5_13_duduge/index.html
+++ b/5_13_duduge/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
+    <meta charset="uft-8">
     <title>두더지 잡기</title>
     <link rel="stylesheet" href="style.css">
 </head>
