--- a/6_10_space/index.html
+++ b/6_10_space/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <button id="startBtn">Start</button>
         <div id="display"></div>
-        <button id="stopBtn"></button>
+        <button id="stopBtn">Stop</button>
     </div>
     <div class="grid"></div>
 
